--- a/HiringTest1/HiringTest1.csproj
+++ b/HiringTest1/HiringTest1.csproj
@@ -277,6 +277,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_NoteThumbnailsPartial.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Shared\_EditNotePartial.cshtml" />
+    <Content Include="Views\Shared\_AddNotePartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
